styled contact form, realigned picture in aboout section, fixed footer to bottom of screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,14 +3,12 @@ height: 100%;
 
 }
 
-.Site{
-    display: flex;
-    min-height: 100vh;
-    flex-direction: column;
-}
+
 
 .Site-content{
-    flex: 1;
+    margin: 0 auto;
+    padding: 0;
+    border: solid 4px #dddddd;
 }
 
 container{
@@ -24,6 +22,7 @@ header{
     margin-bottom: 20px;
     font-family: 'Georgia', Times, Times New Roman, serif;
     border: solid 2px #cccccc;
+    position: relative;
 } 
 
 header::after{
@@ -34,7 +33,10 @@ header::after{
 
 
 
+
+
 main{
+    position: relative;
     margin: 0 auto;
     width: 960px;
     background-color: #ffffff;
@@ -42,9 +44,17 @@ main{
     border: solid 4px #dddddd;
 }
 
+
+
 h2{
+    font-family: 'Georgia', Times, Times New Roman, serif;
     color: #4aaaa5;
+    font-size: 32px;
+    font-weight: bold;
+    padding: 30px 0px 30px 20px;
 }
+
+
 
 p{
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
@@ -53,17 +63,26 @@ p{
     line-height: 1.4em;
 }
 
-.headshot{
+
+img{
     float:left;
     padding: 20px 20px 20px 20px;
 }
 
+
+
 .name{
+    line-height: 90px;
+    font-size: 32px;
+    font-weight: bold;
     background-color: #4aaaa5;
     float: left;
     color: #ffffff;
-    margin-left: 520px;
-    height: 100%;
+    height: 100px;
+    padding: 0 20px;
+    display: block;
+    position:absolute;
+    left:26.5%;
 }
 
 nav{ 
@@ -72,9 +91,14 @@ nav{
 
 
 footer{
+    font-size: 18px;
     background-color: #666666;
     height: 80px;
     border-top: solid 8px #4aaaa5;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
 }
 
 #copyright{
@@ -83,7 +107,6 @@ footer{
 
 nav{
     float: right;
-    margin-right: 530px;
 }
 
 nav ul{
@@ -98,7 +121,8 @@ nav li{
     margin-left: 70px;
     padding-top: 40px;
     font-size: 14pt;
-    position: relative;
+    position: relative;;
+    right:135%
 }
 
 nav a {
@@ -111,9 +135,15 @@ nav a:hover{
 }
 
 hr{
+    border: none;
+    height: 3px;
+    color: #dddddd;
+    background-color: #dddddd;
     margin-right: 20px;
+    margin-left:20px;
 }
 
-#contact-hr{
-margin-left: 20px;
-}
+
+
+
+
